k8s/intenal-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: internal-frontend
  name: internal-frontend
  namespace: hermes
spec:
  ports:
    - name: "8082"
      port: 8082
      targetPort: 8082
  selector:
    app: internal-frontend
